--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-// index.html  
 <!DOCTYPE html>  
 <html lang="de">  
 <head>  
@@ -6,12 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
   <title>TARDIS Quest Tracker</title>  
   <script src="https://cdn.tailwindcss.com"></script>  
-</head>  
-<body>  
-  <div id="root"></div>  
+  <!-- React und ReactDOM einbinden -->  
   <script src="https://unpkg.com/react@18/umd/react.development.js"></script>  
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>  
   <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>  
-  <script src="app.js" type="text/babel"></script>  
+</head>  
+<body class="bg-indigo-950">  
+  <div id="root"></div>  
+  <script src="script.js" type="text/babel"></script>  
 </body>  
 </html>
