--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>  
   <meta charset="UTF-8">  
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-  <title>TARDIS Quest Tracker</title>  
+  <title>Elefantensuche</title>  
   <style>  
     :root {  
       --tardis-blue: #003b6f;  
@@ -616,10 +616,7 @@
 
     <!-- Demo Controls -->  
     <div class="demo-controls">  
-      <button class="demo-btn add" onclick="addPoints(25)">+25 Punkte</button>  
-      <button class="demo-btn add" onclick="addPoints(50)">+50 Punkte</button>  
-      <button class="demo-btn add" onclick="addPoints(100)">+100 Punkte</button>  
-      <button class="demo-btn reset" onclick="resetPoints()">Reset</button>  
+          <button class="demo-btn reset" onclick="resetPoints()">Reset</button>  
     </div>  
 
     <!-- Tabs Navigation -->  
@@ -690,13 +687,7 @@
           </div>  
         </div>  
         
-        <div class="milestone-rewards" id="milestone-rewards" style="display: none;">  
-          <h3>Belohnungen für erreichte Meilensteine:</h3>  
-          <ul class="milestone-rewards-list" id="milestone-rewards-list">  
-            <!-- Will be filled with JavaScript -->  
-          </ul>  
-        </div>  
-      </div>  
+           </div>  
     </div>  
 
     <!-- Tab Content: Rewards -->  
