--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
           </div>  
           <div class="tardis-sign bottom">BOX</div>  
         </div>  
-        <h1>TARDIS Quest Tracker</h1>  
+        <h1>Elefantensuche</h1>  
       </div>  
     </div>  
   </header>  
